--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
-        <h2>[RUS] Individual Assignment, 090422</h2>
-        <form action="http://127.0.0.1:5000" method="post">
+        <h2>[RUS] Individual Assignment - Predict Credit Card Default, 090422</h2>
+        <form action="/" method="post">
             <p>Please enter the income:</p>
             <p><input type="number" name="income"></p>
             <p>Please enter the age:</p>
